# Pixel-Portfolio

./: .env  Cargo.toml  README.md  about.html  aboutstyle.css  contact.html  contactstyle.css  main.html  mainstyle.css  pixel_database.db  setup.sql
src/: auth.rs  main.rs
static/css/: aboutstyle.css  admin.css  contactstyle.css  greet.css  homestyle.css  project_detail.css  projectsstyle.css
static/html/: about.html  contact.html  home.html  projects.html
static/js/: admin.js  project_detail.js  script.js
templates/: admin.html  project_detail.html  projects.html
