[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
rusqlite = { version = "0.29", features = ["bundled"] }
tera = "1.15"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
lazy_static = "1.4"